Eliminacion recomendaciones sin IA, refactorizacion codigo para warnings